--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,15 @@
             <version>6.0.0</version>
         </dependency>
         <dependency>
+    <groupId>com.elega9t</groupId>
+    <artifactId>number-to-words</artifactId>
+    <version>1.0.0</version>
+</dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
+            
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
