--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #(server.port = 8088
 #=======
 server.servlet.context-path=/sisadmrh
-#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
+spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
 #spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SISADMRH
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SISADMRH
 spring.datasource.username=root
 #spring.datasource.username=dialv
 spring.datasource.password=avasacreer
