--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,11 @@
 #spring.datasource.password=root
 #(server.port = 8088
 #=======
-server.servlet.context-path=/sisadmrh
-#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
-#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/SISADMRH
+spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
 spring.datasource.username=root
-#spring.datasource.username=dialv
-spring.datasource.password=root
+spring.datasource.password=avasacreer
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql = true
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 
 ##spring security
