agregando mods al config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
+spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=root
 #(server.port = 8088
 #=======
-spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
+#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
+server.servlet.context-path=/sisadmrh
 spring.datasource.username=root
 spring.datasource.password=avasacreer
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
+spring.jpa.show-sql = true
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 ##spring security
 #spring.security.user.name=betillo
