--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
+#spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH
 #spring.datasource.username=root
 #spring.datasource.password=root
 #(server.port = 8088
 #=======
-#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
+spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
 spring.datasource.username=dialv
 spring.datasource.password=avasacreer
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
