--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=root
-#(server.port = 8088
+#server.port = 8088
 #=======
-spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
+#spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
 server.servlet.context-path=/sisadmrh
 spring.datasource.username=root
 spring.datasource.password=avasacreer
