--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=root
 #server.port = 8088
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
 #spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH
 server.servlet.context-path=/sisadmrh
 spring.datasource.username=root
-spring.datasource.password=avasacreer
+spring.datasource.password=root
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
