--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://46.101.33.208:3306/SISADMRH?useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3306/SISADMRH?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 #spring.datasource.password=avasacreer
 #server.port = 8088
 
